reboot02-scored-resume-producer/k8s/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoredresume-producer
  labels:
    app: scoredresume-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoredresume-producer
  template:
    metadata:
      labels:
        app: scoredresume-producer
    spec:
      serviceAccountName: gke-bucket-authenticate
      containers:
        - name: scoredproducer
          image: us-central1-docker.pkg.dev/ltc-reboot25-team-39/application-repo/scoreproducerapp:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "50m"
              memory: "192Mi"
            limits:
              cpu: "200m"
              memory: "384Mi"
